# thess_ai_whatsapp_agent

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
config/: __init__.py  logger.py  settings.py
prompts/: description.txt  expected_output.txt  instructions.txt
secrets/: .env.example
services/: agent_service.py  buffer_service.py  memory_service.py  whatsapp_service.py
tools/: datetime_tools.py
utils/: agent_utils.py  whatsapp_utils.py
