[project]
name = "thess_ai_whatsapp_agent"
version = "0.1.0"
description = "Um assistente pessoal de IA para WhatsApp, chamado Thess."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.0.3",
    "chromadb>=1.0.21",
    "ddgs>=9.5.5",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.36.0",
    "pypdf>=6.0.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

pre_run = 'task format'
run = 'docker compose up --build --abort-on-container-exit'

up = 'docker compose up'

stop = 'docker compose stop'
pre_down = 'task stop'
down = 'docker compose down --volumes --remove-orphans'

build = 'docker compose build --no-cache'
logs = 'docker compose logs -f'
restart = 'task down && task run'
